--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="웹 퍼블리셔 박지영의 포트폴리오 입니다." />
+    <meta name="keywords" content="웹 퍼블리셔, 퍼블리셔, 포트폴리오, web publisher, publisher, portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jiyoungv.github.io/" />
+    <meta property="og:title" content="The Portfolio." />
+    <meta property="og:image" content="%PUBLIC_URL%/og_image.jpg" />
+    <meta property="og:description" content="웹 퍼블리셔 박지영의 포트폴리오 입니다." />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css" />
+    <title>The Portfolio.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
