--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0E39D5" />
     <meta name="description" content="웹 퍼블리셔 박지영의 포트폴리오 입니다." />
     <meta name="keywords" content="웹 퍼블리셔, 퍼블리셔, 포트폴리오, web publisher, publisher, portfolio" />
     <meta property="og:type" content="website" />
