--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="웹 퍼블리셔 박지영의 포트폴리오 입니다." />
     <meta name="keywords" content="웹 퍼블리셔, 퍼블리셔, 포트폴리오, web publisher, publisher, portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jiyoungv.github.io/" />
+    <meta property="og:url" content="https://jiyoungv.github.io/portfolio/v3/" />
     <meta property="og:title" content="The Portfolio." />
     <meta property="og:image" content="%PUBLIC_URL%/og_image.jpg" />
     <meta property="og:description" content="웹 퍼블리셔 박지영의 포트폴리오 입니다." />
